fix: allow for values that contain =

--- a/example.properties.j2
+++ b/example.properties.j2
@@ -1,4 +1,5 @@
 # test comment
 org.wibble.testCamelCaps={{ ORG_WIBBLE_TEST_CAMEL_CAPS }}
 org.wibble.test.long.property={{ ORG_WIBBLE_TEST_LONG_PROPERTY }}
+org.wibble.brokerURL={{ ORG_WIBBLE_BROKER_URL }}
 
