--- a/example.properties.j2
+++ b/example.properties.j2
@@ -1,5 +1,8 @@
 # test comment
 org.wibble.testCamelCaps={{ ORG_WIBBLE_TEST_CAMEL_CAPS }}
 org.wibble.test.long.property={{ ORG_WIBBLE_TEST_LONG_PROPERTY }}
+# testing = in value
 org.wibble.brokerURL={{ ORG_WIBBLE_BROKER_URL }}
+# testing - in key
+org.wibble.message-listener.s3.accessKey={{ ORG_WIBBLE_MESSAGE_LISTENER_S3_ACCESS_KEY }}
 
