--- a/example.properties.j2
+++ b/example.properties.j2
@@ -5,4 +5,5 @@ org.wibble.test.long.property={{ ORG_WIBBLE_TEST_LONG_PROPERTY }}
 org.wibble.brokerURL={{ ORG_WIBBLE_BROKER_URL }}
 # testing - in key
 org.wibble.message-listener.s3.accessKey={{ ORG_WIBBLE_MESSAGE_LISTENER_S3_ACCESS_KEY }}
-
+# testing weird cron
+org.wibble.cronFormat={{ ORG_WIBBLE_CRON_FORMAT }}
